# MusicTagger

./: README.md  main.py  pyproject.toml  test.py
MusicTager/: main.py
MusicTager/api/: api_error.py  cloud_api.py  kugou_api.py
MusicTager/components/: info_label.py  mask_widget.py  work_thread.py
MusicTager/components/dialog/: auto_meatadata_dialog.py  batch_modify_dialog.py  modify_dialog.py  setting_dialog.py  warning_dialog.py
MusicTager/lyric_decode/: lyric_decode.py
MusicTager/song_metadata/: compare_metadata.py  metadata_type.py  read_metadata.py  write_metadata.py
MusicTager/ui/: metadata_widget.py
MusicTager/ui/ui_source/: AutoMetadataDialog.py  MetadataWidget.py  ModifyDialog.py  SettingDialog.py  WarningDialog.py
