[project]
name = "musictagger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "mutagen>=1.47.0",
    "pillow>=12.1.1",
    "pycloudmusic>=0.1.4.5",
    "pyinstaller>=6.19.0",
    "pymediainfo>=7.0.1",
    "pyqt6>=6.10.2",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "tinytag>=2.2.0",
]
